# genrt

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  justfile  rust-toolchain.toml
.agents/: README.md
.agents/standards/: commits.md  rustdoc.md
.cargo/: config.toml
.codex/: config.toml
.codex/agents/: architect.toml  developer.toml  explorer.toml  reviewer.toml  tester.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
ai-docs/: architecture.md  commits.md  debugging.md
ai-docs/decision-records/: ADR-0001-architecture-strategy.md  ADR-0002-aarch64-irq-path-gicv2-timer.md  (+23 more)
arch/aarch64/: AGENTS.md  Cargo.toml  README.md  build.rs
arch/aarch64/link/: qemu-virt.ld
arch/aarch64/src/: boot.s  console.rs  context.rs  esr.rs  exception.rs  exceptions.s  gic.rs  lib.rs  mmio.rs  timer.rs  trap_frame.rs
arch/aarch64/src/mmu/: abi.rs  boot.rs  hva.rs  mod.rs
arch/aarch64/src/platform/: boot_dtb.rs  mod.rs  qemu.rs
crates/bootinfo/: Cargo.toml
docs/: AGENTS.md  README.md  month1-plan.md  month2-plan.md  releases.md  testing.md
kernel/: AGENTS.md  Cargo.toml  README.md
kernel/src/: arch_consts.rs  boot.rs  config.rs  console.rs  debug.rs  demo.rs  dtb.rs  errno.rs  init.rs  ipc.rs  lib.rs  limits.rs  log.rs  panic.rs  process.rs  sched.rs  sync.rs  syscall.rs  task.rs  task_call.rs  test_arch_stubs.rs  time.rs
kernel/src/arch/: context.rs  mod.rs
kernel/src/fs/: README.md  fd.rs  initramfs.rs  mod.rs  path.rs  ramfs.rs
kernel/src/loader/: elf.rs  elf_arch.rs  mod.rs
kernel/src/memory/: README.md  frame_alloc.rs  heap.rs  map.rs  mod.rs  types.rs  user.rs  vm.rs
kernel/src/process/: README.md  access.rs  error.rs  exec.rs  fault.rs  files.rs  fork.rs  id.rs  image.rs  lifecycle.rs  mod.rs  record.rs  resources.rs  spawn.rs  state.rs  table.rs  wait.rs
kernel/src/sched/: README.md  bootstrap.rs  call.rs  ipc.rs  mod.rs  preempt.rs  sleep.rs  thread.rs  transition.rs  wait.rs
kernel/src/sync/: mod.rs  preempt.rs
kernel/src/test_support/: kernel_runtime.rs  mod.rs  protocol.rs  user_fault.rs
memory/: AGENTS.md  README.md  current-state.md  invariants.md
scripts/: install-arch-deps.sh
tests/: AGENTS.md
tools/xtask/: AGENTS.md  Cargo.toml  README.md
tools/xtask/src/: artifacts.rs  cli.rs  dist.rs  initramfs.rs  main.rs  product.rs  product_contract.rs  qemu.rs  workflow.rs
tools/xtask/src/test/: cases.rs  mod.rs  protocol.rs  runner.rs
user/: AGENTS.md  README.md
(+84 files in other folders)
