[workspace]
resolver = "2"
members = [
    "kernel",
    "arch/aarch64",
    "crates/bootinfo",
    "tools/xtask",
]

default-members = ["tools/xtask"]

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Ilya Shishov"]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
cc = "1.1"
