[package]
name = "kernel"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
log-level-error = []
log-level-warn = []
log-level-info = []
log-level-debug = []
log-level-trace = []

[dependencies]
bootinfo = { path = "../crates/bootinfo" }
